--- a/gb/23/8/28/n14062316.md
+++ b/gb/23/8/28/n14062316.md
@@ -8,6 +8,7 @@
 <hr>
 <p><strong>尼禄重生，千年见证</strong></p>
 <p>历史在惊人的重复中警醒着后人。小周破译了旧预言，留下了新预言，随之就无可抗争地坠入了历史对他的预言……</p>
+<p style="text-align: center;">§</p>
 <p>“咚——”那凶徒狠劲砸了一下门，纪哥这才醒来，捂着胸口叫着：“哟，赵队……怎么啦？”</p>
 <p>原来是新来的队长，他一指我后边儿，我回头这才看见，小周侧着腿、侧着身子、单手铐在床上、单手炼功呢！</p>
 <p>纪哥赶忙上去把小周按到了床上。小周向赵队申辩，赵队斥道：“甭以为这儿没监视器，我就是监视器！”</p>
@@ -15,7 +16,6 @@
 <p>赵队下了口谕：“他丫要叫，堵上嘴！告饶了再找我。想绝食？两天给丫治过来！”说完拿着钥匙，气哼哼地走了。</p>
 <p>纪哥打了个哈欠：“告饶吧！就你这身子板儿，一会儿就散架了。”他说着往床上一躺，说：“趁我没睡着，赶紧告饶……”没一分钟，他打上呼噜了。</p>
 <p>我和小冯劝小周，白劝。没一会儿，他就开始全身抽搐，床都跟着颤抖。我叫醒了纪哥，请他把我和小冯的枕头塞在了小周的屁股下边……</p>
-<p style="text-align: center;">§</p>
 <p>清早开了手铐，小周还在直挺挺地躺着，僵尸一样，胳膊肿了两圈，身躯更显得干瘪了。我借着洗漱的工夫，抓紧回去给小周按揉双肩，把胳膊归位，他疼得直冒汗。</p>
 <p>十来点钟，胡管儿来了，把上回领事送给我的英文报纸和英文《圣经》带来了。他悄悄告诉我：他安排好了，可以一直在这儿疗养，临出去再把我接走。</p>
 <p>我听着这个高兴！这简直是我坐牢最高兴的时刻。</p>
@@ -73,7 +73,6 @@
 <p>小周断了两顿，可是有点儿受不了了，躺在床上腰都直不了了。</p>
 <p>接下来像中了邪一样。中午美眉护士来做鼻饲，热奶在凉水盆里炸底儿了；晚上她又急着下班，滚烫的奶没凉就给小周灌了下去。小周双手铐在床头，烫的身子直扭。胃粘膜烫坏了，没法鼻饲了。今儿拔了胃管儿，加了两瓶输液。</p>
 <p>据纪哥说，去年法轮功绝食的特别多，今年不普遍。监号里有绝食的，都在医务室就地给灌，五个犯人把就地一按，一个犯人插管儿就灌！绝食时间太长的，看着实在不行的才送这儿输液。等几天缓过来了，赶紧送劳教所，要么就踹分局判大刑去。有两女法轮功绝食，在这输了几天液就扔劳教所了，到那儿没灌一个月，又送这儿的劳教所病房输液来了。劳教所灌食才野蛮呢，都有灌肺里灌死的，死了也白死。</p>
-<p style="text-align: center;">§</p>
 <p>吃了晚饭，美眉护士穿着警服来收尾，这儿的大夫、护士都是警察编制，有警衔的。</p>
 <p>“铃——”这美女掏出手机，嗲声嗲气地聊个没完，那撒娇的样子，连纪哥都不好意思地出去了。我只好强力看书，来个听而不闻。</p>
 <p>“护士，他液没了。”小冯终于忍不住了。</p>
@@ -89,40 +88,39 @@
 <p><em>点阅【<span style="color: #000080;"><a style="color: #000080;" href="https://github.com/1992513/djy/blob/master/gb/tag/北京逃生记.md#1">北京逃生记</a></span>】系列文章</em></p>
 <p>责任编辑：杨丽海</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/23/9/4/n14066528.md#1">北京逃生记(86) 昂贵的自由——潜逃惊魂</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/23/9/4/n14066511.md#1">北京逃生记(85) 昂贵的自由——负债累累</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/23/9/4/n14066490.md#1">北京逃生记(84) 昂贵的自由——取保候审</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/23/9/3/n14066465.md#1">北京逃生记(83) 昂贵的自由——最后一课</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/23/9/3/n14066454.md#1">北京逃生记(82) 昂贵的自由——堂皇的讹诈</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/23/9/3/n14066446.md#1">北京逃生记(81) 昂贵的自由——完美脱逃</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/23/9/3/n14066417.md#1">北京逃生记(80) 昂贵的自由——厕所人权秀</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/23/8/28/n14062325.md#1">北京逃生记(79) 恐怖的监狱医院——预言成真</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/23/8/28/n14062306.md#1">北京逃生记(77) 恐怖的监狱医院——“六字真言” 无敌宝鉴</a></li>
-<hr>
+<li><a href="https://github.com/920513/djy/blob/master/gb/11/6/12/n3284139.md#1">沉粹典丽 风骨逆劲──唐初四大书法家之 虞世南</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/11/10/7/n3394783.md#1">后世圭臬 唐楷第一书家欧阳询</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/16/7/2/n8059920.md#1">【千古英雄人物】唐太宗(22) 墨海椽笔</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/12/n9133922.md#1">【书法漫谈】书法家的对话：放松与放纵</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163925.md#1">唐代书法漫谈（1）</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163955.md#1">唐代书法漫谈（2）</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/17/5/20/n9163956.md#1">唐代书法漫谈（3）</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/19/1/16/n10979954.md#1">仁心执法 让死刑判起来更难的唐太宗</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/22/1/16/n13507994.md#1">【书法漫谈】中国书法的神性特点</a></li>
+<li><a href="https://github.com/920513/djy/blob/master/gb/23/6/29/n14025211.md#1">宏硕壮阔 最具帝王气象的唐太宗诗歌</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank">从大师到徒弟的传奇</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/3/2/n10185727.md#1" target="_blank">“石油之父”惨遭灭门（上）</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/5/6/n11238020.md#1" target="_blank">四百万难治好的脑瘤并发症 修大法痊愈</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank">中共的伪火骗局</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/2/6/n10120117.md#1" target="_blank">林辉：文革“群丑图”从热传到被封杀的背后</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/5/17/n10401300.md#1" target="_blank">三位西方富豪的经商成功之道</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/16/n14312505.md#1">【未解之谜】美国牧师濒死 惊见撒旦控制人类计划</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/12/n14309782.md#1">另外空间的鬼有没有轮回？鬼能自救吗？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/9/n14308151.md#1">香港凉茶趣谈：凉茶不“凉” 龟苓膏最初功用非“清热解毒”？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/15/n14311467.md#1">巴西空难前一天 灵媒直播预言：我看到坠机</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/1/n14302523.md#1">【古道人生】修佛后他足跛眼盲被雷击死 这是佛无灵吗？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/20/n14314591.md#1">【菁英论坛】疫情反扑 多种病毒伺机发威</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/19/n14313583.md#1">【晚间新闻】川普誓言对中共强硬</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/14/n14311337.md#1">【百年真相】绝对想不到 中共最害怕谁？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/18/n14313413.md#1">震惊全网 北京211大学毕业女生死在出租屋</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/19/n14313544.md#1">北戴河会议后中共党魁首露面 官媒报导异常</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/18/n14313394.md#1">李佩霞被“双开” 毛奇曾说她不死也要掉层皮</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/17/n14313092.md#1">同步晒礼服和戒指 赵丽颖被传与冯绍峰复合？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/17/n14313104.md#1">韩星2024年剧酬排名曝光 金秀贤居冠</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/19/n14313950.md#1">进军大银幕票房翻车 张若昀被劝回去拍剧</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/17/n14313061.md#1">徐峥回应新片消费苦难：没看电影直接喷不公平</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/18/n14313177.md#1">乔治克隆尼：亚马逊和沃尔玛正在蚕食好莱坞</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/14/n14311371.md#1">乐龄族必吃六类食物 增肌减脂、维持认知力</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/18/n14313229.md#1">蔬果怎么洗才安全？ 微生物学家这么说</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/15/n14312095.md#1">日本专家：年过六十 小心五种错误保健方法</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/19/n14313638.md#1">除了东京之外 日本这6个地方也值得一游</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/18/n14313114.md#1">别忽视心脏病早期微妙症状 哈佛：预防五步骤</a></li>
-<hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/15/n14531481.md#1">辛劳十余年 老仆扶养辞世主子三女长大 未曾一睹芳容</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/7/n14526567.md#1">汉文帝受小官当众羞辱竟升他的官 到底怎回事？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/5/8/n14502333.md#1">宰相肚里能撑船——北宋贤相王旦</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/25/n14538781.md#1">【未解之谜】童言童语揭前世秘密 真相令人震惊</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/24/n14537972.md#1">旅美台湾画家张家玮的岛屿之梦</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/30/n14541966.md#1">【直播】莱维特主持白宫简报会（6/30）</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/30/n14542112.md#1">【直播】布鲁斯主持国务院简报会（6/30）</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/28/n14540866.md#1">【纪元焦点】河流污染柳州断水 民众何以为生？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/28/n14540501.md#1">荔枝大烂市 扔掉喂牛 广东果农欲哭无泪</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/27/n14540279.md#1">2025全球最佳大学排名 美13大学跻身前20</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/28/n14540414.md#1">传“前总监包养200女”小米称是切菜工引质疑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/27/n14540300.md#1">郑欣宜因伤退出《歌手2025》 网友呛节目组</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/28/n14540561.md#1">《全知读者视角》揭秘幕后改编与拍摄过程</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/29/n14541038.md#1">贝克汉姆紧急动手术 螺丝嵌入骨头超惊悚</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/28/n14541022.md#1">癌症恶化至第四期 前港姐吴文忻惊爆离婚</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/28/n14540672.md#1">第36届金曲奖完整得奖名单 李竺芯赢三大奖</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/29/n14541283.md#1">为什么我们会爱上不爱我们的人？ 专家解析</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/22/n14536360.md#1">每日一颗巴西坚果 远离营养补充剂</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/20/n14535178.md#1">烤鱼加腌渍物致癌？营养师破解饮食禁忌迷思</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/27/n14540120.md#1">如何处理继承的房产：自住 出租还是出售？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/27/n14540230.md#1">小心！不要觉得食物不咸就很健康</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/8/28/n14062316.htm">北京逃生记(78) 恐怖的监狱医院——尼禄重生 千年见证</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/23/8/28/n14062316.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
